module-2-scale-vms/manifests/control-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-vm
  namespace: travel-control
  labels:
    app: control-vm
spec:
  ports:
    - port: 8080
      name: http
  selector:
    kubevirt.io/domain: control-vm
